# Resevo

./: .gitignore  .mcp.json.example  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  README.zh-CN.md  harness.yaml  pyproject.toml
decisions/: 20260623_canonical_harness_path_resolution.md  20260623_g_drive_workspace_closeout_required.md  20260623_grouped_historical_session_assetization.md  20260623_lightweight_harness_automation_loop.md  20260623_ppt_bitmap_effective_dpi_audit_standard.md  20260623_ppt_real_image_and_editable_layer_standard.md  20260626_asset_evolution_loop_upgrade.md  20260627_sc_nmt_fullframe_scattermasking_gate.md  20260627_sc_nmt_sequence_harness_registry.md  20260701_one_click_self_evolution_loop.md  20260701_paper_driven_workflow_layer.md  20260701_sc_nmt_portable_loop_contract_system.md  20260701_sc_nmt_ppt_pseudocolor_only_rule.md  20260701_sc_nmt_sci2_review_processing_gates.md  20260701_small_paper_docs_write_root.md  20260703_target_journal_reviewer_citation_rule.md  20260706_sc_nmt_paper_sprint_template_manuscript_route.md  20260706_sc_nmt_view4_dot_board_undistort_route.md  20260707_researchloop_branding.md  20260708_nature_skills_starter_workflow_onboarding.md
mcp/: README.md  research_harness_mcp.py  resevo_mcp.py
registry/: asset_evolution.yaml  decisions.yaml  feedback.yaml  figures.yaml  knowledge.yaml  literature.yaml  model_assets.yaml  output_objects.yaml  papers.yaml  ppt_assets.yaml  projects.yaml  prompts.yaml  research_assets.yaml  upstream_workflows.yaml  utility_metadata.yaml  workflow_improvement_backlog.yaml
(+125 files in other folders)
