[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resevo"
version = "0.1.0"
description = "Evidence-governed self-evolving research workflow harness."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Resevo maintainers" }]
dependencies = [
  "PyYAML>=6.0",
  "fastmcp>=2.0",
]

[project.scripts]
resevo = "resevo.cli:main"
researchloop = "resevo.compat:main"

[tool.setuptools.packages.find]
where = ["src"]
